fixes to footer on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,7 +54,7 @@ right:0; */
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur( 7px );
   -webkit-backdrop-filter: blur( 7px );
-  margin-top: 5%;
+  margin-top: 10%;
 }
  
 .foot{
